fix: apply scrollbar styling to self

--- a/framework/components/AApp/base/scrollbar.scss
+++ b/framework/components/AApp/base/scrollbar.scss
@@ -3,13 +3,15 @@ $scrollbar-track-width: 15px;
 $scrollbar-thumb-border-radius: 8px;
 
 .theme--default.a-app--scrollbars {
-  ::-webkit-scrollbar-track {
+  &::-webkit-scrollbar-track,
+  & ::-webkit-scrollbar-track {
     background: map-deep-get($atomic-default, "app", "scrollbar", "track-bg");
     border: $border-width solid
       map-deep-get($atomic-default, "app", "scrollbar", "track-border-color");
   }
 
-  ::-webkit-scrollbar-thumb {
+  &::-webkit-scrollbar-thumb,
+  & ::-webkit-scrollbar-thumb {
     background-color: map-deep-get(
       $atomic-default,
       "app",
@@ -20,13 +22,15 @@ $scrollbar-thumb-border-radius: 8px;
 }
 
 .theme--dusk.a-app--scrollbars {
-  ::-webkit-scrollbar-track {
+  &::-webkit-scrollbar-track,
+  & ::-webkit-scrollbar-track {
     background: map-deep-get($atomic-dusk, "app", "scrollbar", "track-bg");
     border: $border-width solid
       map-deep-get($atomic-dusk, "app", "scrollbar", "track-border-color");
   }
 
-  ::-webkit-scrollbar-thumb {
+  &::-webkit-scrollbar-thumb,
+  & ::-webkit-scrollbar-thumb {
     background-color: map-deep-get(
       $atomic-dusk,
       "app",
@@ -37,13 +41,15 @@ $scrollbar-thumb-border-radius: 8px;
 }
 
 .a-app--scrollbars {
-  ::-webkit-scrollbar-thumb {
+  &::-webkit-scrollbar-thumb,
+  & ::-webkit-scrollbar-thumb {
     border: 4px solid transparent;
     border-radius: $scrollbar-thumb-border-radius;
     background-clip: content-box;
   }
 
-  ::-webkit-scrollbar {
+  &::-webkit-scrollbar,
+  & ::-webkit-scrollbar {
     height: $scrollbar-track-height;
     width: $scrollbar-track-width;
   }
